--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
+  "name": "ping_a_Google",
+  "version": "1.0.0",
+  "description": "hace un ping a un servidor de Google",
+  "author": "Araceli",
+  "main": "servidor.js",
   "dependencies": {
     "child_process": "^1.0.2",
     "express": "^4.18.2",
-    "os": "^0.1.2"
+    "os" : [ "linux" ]
+  },
+  "scripts": {
+    "start": "node servidor.js"
   }
 }
